<resources>
    <string name="question1">can you guess name of this bird?</string>
    <string name="radio_button1">parrot</string>
    <string name="radio_button2">crow</string>
    <string name="radio_button3">sparrow</string>
    <string name="q2answer">parrot</string>
    <string name="q3answer">spiderman</string>
    <string name="question2">who is this super hero?</string>
    <string name="superman">superman</string>
    <string name="spiderman">spiderman</string>
    <string name="batman">batman</string>
    <string name="joshua">joshua</string>
    <string name="question3">type the name of this person?</string>
    <string name="typeanswer">type the answer here</string>
</resources>
