<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ctadmin.quizeapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/bird"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:src="@drawable/bird" />
        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/question1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#4689C8"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q2_options"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button2"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button3"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>
        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:src="@drawable/spider" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="25dp"
            android:text="@string/question2"
            android:textStyle="bold"
            android:weight="1"
            android:textColor="#4689C8"/>
        <CheckBox
            android:id="@+id/superman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/superman"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/spiderman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spiderman"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/batman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batman"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/joshua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joshua"
            android:textAppearance="?android:textAppearanceMedium" />
        <ImageView
            android:id="@+id/stevejobs"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:src="@drawable/stevejobs" />
        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="25dp"
            android:text="@string/question3"
            android:textStyle="bold"
            android:weight="1"
            android:textColor="#4689C8"/>
        <EditText
            android:id="@+id/typeanswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeanswer"
            android:inputType="textMultiLine" />
    </LinearLayout>
</ScrollView>
